--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Typescript y Mongoose (Nodejs &amp; Mongodb)",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn src/index.ts"
   },
   "repository": {
     "type": "git",
