--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@typegoose/typegoose": "^9.10.1",
+    "mongoose": "^6.4.4"
   }
 }
