--- a/.eslintrc
+++ b/.eslintrc
@@ -10,8 +10,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    "ecmaVersion": "latest"
   },
   "plugins": [
     "@typescript-eslint",
