--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/gcristia/typescript-mongoose-nodejs-mongodb#readme",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
@@ -32,6 +33,7 @@
   "dependencies": {
     "@typegoose/typegoose": "^9.10.1",
     "@types/mongoose": "^5.11.97",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^6.4.4",
     "uuid": "^8.3.2"
   }
